Form fills out automatically when using appDeleteEmployee.js

--- a/public/employee.html
+++ b/public/employee.html
@@ -40,11 +40,12 @@
         <label for="vehicle">Allow vehicle on-site</label>
         <label for="license-plate">License Plate</label>
         <input type="text" id="license-plate" placeholder="License Plate">
-        <button role="button" type="submit" class="js-delete-button">Delete</button>
-        <button role="button" type="submit" class="js-save-button">Save</button>
-
+        <button role="button" type="submit" class="js-submit-button"></button>
+        <button role="button" type="" class="js-helper-button"></button>
     </form>
 
-    <script type="text/javascript" src="appCreateEmployee.js"></script>
+    <!-- <script type="text/javascript" src="appCreateEmployee.js"></script> -->
+<script type="text/javascript" src="appDeleteEmployee.js"></script>
+
 </body>
 </html>
