--- a/public/list.html
+++ b/public/list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Access Control</title>
-    <!-- <link rel="stylesheet" href="employee.css"> -->
+    <link rel="stylesheet" href="list.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
             <option value="department">By Department</option>
             <option value="employer">By Employer</option>
         </select>
-        <button role="button" type="submit" class="js-search-button">Search</button>
+        <button role="button" type="button" class="js-search-button">Search</button>
     </form>
 
     <table class="js-results" aria-live= "assertive" hidden>
