--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
         <button role="button" type="submit">Log In</button>
     </form>
     <div clas="js-start-loader" hidden>
-        
+        <span class="invisible-text" role="alert" aria-busy="true">Loading</span>
     </div>
     <div class="js-error-message" hidden></div>
 
