Added overview html and js

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -23,7 +23,7 @@
         <input type="text" name="password" id="password">
         <button role="button" type="submit">Log In</button>
     </form>
-    <div clas="js-start-loader" hidden>
+    <div clas="js-loader" hidden>
         <span class="invisible-text" role="alert" aria-busy="true">Loading</span>
     </div>
     <nav>
