--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -27,7 +27,7 @@
         <input type="password" name="password" id="password" required>
         <button role="button" type="submit">Create Account</button>
     </form>
-    <div clas="js-start-loader" hidden>
+    <div clas="js-loader" hidden>
         <span class="invisible-text" role="alert" aria-busy="true">Loading</span>
     </div>
     <nav>
