Added department, employer and training routers and tests

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -35,7 +35,7 @@
 
     </div>
     <script src="../utilities/cache.module.js"></script>
-    <script src="../utilities/render.module.js"></script>
+    <script src="../utilities/render.employee.module.js"></script>
     <script src="../utilities/http.user.module.js"></script>
     <script src="../utilities/http.employee.module.js"></script>
  
