Create working for all options. Update working for all options except employee

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
         crossorigin="anonymous"></script>
     <!-- <link rel="icon" href="http://example.com/favicon.png"> -->
-    <title class="js-title">Log In</title>
+    <title class="js-title">Ready2Work</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div class="container js-nav-bar nav-bar">
         
     </div>
-    </header>
+</header>
 
     <section class="js-form">
 
@@ -39,12 +39,14 @@
     <div clas="js-loader" hidden>
         <span class="invisible-text" role="alert" aria-busy="true">Loading</span>
     </div>
-   
+
+    <div class="info-window js-info-window" role="dialog" aria-modal="true"></div>
 
     <script type="text/javascript" src="./utilities/cache.module.js"></script>
     <script type="text/javascript" src="./utilities/http.employee.module.js"></script>
     <script type="text/javascript" src="./utilities/http.user.module.js"></script>
     <script type="text/javascript" src="./auth/auth.page.js"></script>
+    <script type="text/javascript" src="./render/render.create.module.js"></script>
     <script type="text/javascript" src="./render/render.form.module.js"></script>
     <script type="text/javascript" src="./render/render.search.module.js"></script>
     <!-- <script type="text/javascript" src="./utilities/history.module.js"></script> -->
