--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Rubik|Poppins" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="nav-bar.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -29,9 +29,9 @@
             
         </div>
     </header>
-    <section class="js-intro" hidden></section>
+    <section class="js-intro intro" hidden></section>
     <section class="js-form form"></section>
-    <section class="js-results" aria-live="assertive"></section>
+    <section class="js-results results" aria-live="assertive"></section>
     <section class="js-message box" hidden></section>
 
     <div clas="js-loader loader" hidden>
@@ -39,7 +39,8 @@
     </div>
 
     <div class="info-window js-info-window" role="dialog" aria-modal="true"></div>
-
+    <footer class="js-footer"></footer>
+    
     <script type="text/javascript" src="./utilities/cache.module.js"></script>
     <script type="text/javascript" src="./utilities/http.employee.module.js"></script>
     <script type="text/javascript" src="./utilities/http.user.module.js"></script>
