--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Quicksand|Ramabhadra|Hammersmith+One|Noto+Sans+JP|Rubik|Poppins|Krona+One|Prosto+One|Viga|Cabin|Oswald|Istok+Web|Francois+One"
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Poppins|Krona+One|Prosto+One|Viga|Cabin|Oswald|Istok+Web|Francois+One"
     rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="newnav.css">
+    <link rel="stylesheet" type="text/css" href="navbar.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
@@ -199,10 +199,10 @@
         <footer class="js-footer" aria-live="assertive"></footer>
     </div>
     <script type="text/javascript" src="./utilities/cache.module.js"></script>
-    <script type="text/javascript" src="./utilities/http.employee.module.js"></script>
+    <script type="text/javascript" src="./utilities/http.request.module.js"></script>
     <script type="text/javascript" src="./utilities/http.user.module.js"></script>
     <script type="text/javascript" src="./auth/auth.page.js"></script>
-    <script type="text/javascript" src="./render/render.create.module.js"></script>
+    <script type="text/javascript" src="./render/render.update.module.js"></script>
     <script type="text/javascript" src="./render/render.form.module.js"></script>
     <script type="text/javascript" src="./render/render.search.module.js"></script>
     <script type="text/javascript" src="index.js"></script>
