Fix user level label on desktop.

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     
     <section class="js-help help no-padding wide up" aria-live="assertive">
         <div class="img-container">
-            <img src="https://www.hunters-wholesalers.co.uk/images/access-control-systems.jpg" alt="A hand scanning a card.">
+            <img src="https://www.tdsi.co.uk/res/infra%20red%20swipe%20reader%20with%20keypad%20_%201.jpg" alt="A hand scanning a card.">
             
         </div>
         <div class="info-container">
